added creating an object

--- a/PluralsightTutorial/Views/Home/Index.cshtml
+++ b/PluralsightTutorial/Views/Home/Index.cshtml
@@ -12,8 +12,12 @@
             <tr>
                 <td>@restaurant.Id</td>
                 <td>@restaurant.Name</td>
+                <td>
+                    <a asp-action="Details" asp-route-id="@restaurant.Id">Details</a>
+                </td>
             </tr>
         }
     </table>
+    <a asp-action="Create">Add new restaurant</a>
 </body>
 </html>
